Fix alignment of analytics date filter

--- a/ui/src/app/components/analytics/analytics.component.scss
+++ b/ui/src/app/components/analytics/analytics.component.scss
@@ -2,7 +2,8 @@ ion-content {
   --ion-background-color: transparent;
 
   .centered-content {
-    height: 100%;
+    height: 90%;
+
     swiper-container {
       width: 100%;
       height: 100%;
@@ -10,6 +11,10 @@ ion-content {
 
     .filter-container {
       margin-top: 0px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      height: 10%;
 
       ion-item {
         --background: transparent;
